<resources>
    <string name="app_name">tch057Proj</string>
    <string name="quelques_destinations">Quelques destinations</string>
    <string name="o_voulez_vous_npartir">Où voulez-vous\npartir ?</string>
    <string name="historique">Historique</string>
    <string name="rechercher_une_destination">Rechercher une destination</string>
    <string name="afficher_les_filtres">Afficher les filtres</string>
    <string name="prix_maximal">Prix maximal</string>
    <string name="date_de_d_part">Date de départ</string>
    <string name="aucun_voyage_trouv">Aucun voyage trouvé</string>
    <string name="cat_gories">Catégories</string>
    <string name="nom">Nom</string>
    <string name="pr_nom">Prénom</string>
    <string name="courriel">Courriel</string>
    <string name="t_l_phone">Téléphone</string>
    <string name="adresse">Adresse</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="courriel2">Courriel</string>
    <string name="mot_de_passe2">Mot de passe</string>
    <string name="se_connecter">Se connecter</string>
    <string name="cr_er_un_compte">Créer un compte</string>
    <string name="back_button">Back Button</string>
    <string name="s_lectionner_la_date_de_d_part">Sélectionner la date de départ</string>
    <string name="places_disponibles">Places disponibles</string>
    <string name="nombre_de_places">Nombre de places</string>
    <string name="entrez_le_nombre_de_places">Entrez le nombre de places</string>
    <string name="prix_total">Prix Total</string>
    <string name="prix_0">Prix: 0 $</string>
    <string name="v_rifier_la_disponibilit">Vérifier la disponibilité</string>
    <string name="image_de_voyage">Image de Voyage</string>
    <string name="back">Back</string>
    <string name="description">Description</string>
    <string name="dur_e">Durée</string>
    <string name="activit_s_incluses">Activités incluses</string>
    <string name="places_disponibles2">Places disponibles</string>
    <string name="reserver">reserver</string>
    <string name="cat_gorie">Catégorie</string>
    <string name="image">Image</string>
</resources>