<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="24dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText android:id="@+id/etNom" android:hint="@string/nom" android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <EditText android:id="@+id/etPrenom" android:hint="@string/pr_nom" android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <EditText android:id="@+id/etCourriel" android:hint="@string/courriel" android:inputType="textEmailAddress" android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <EditText android:id="@+id/etAge" android:hint="Âge" android:inputType="number" android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <EditText android:id="@+id/etTelephone" android:hint="@string/t_l_phone" android:inputType="phone" android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <EditText android:id="@+id/etAdresse" android:hint="@string/adresse" android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <EditText android:id="@+id/etMotDePasse" android:hint="@string/mot_de_passe" android:inputType="textPassword" android:layout_width="match_parent" android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnInscription"
            android:text="@string/s_inscrire"
            android:textColor="#FFFFFF"
            android:backgroundTint="#00BCD4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"/>
    </LinearLayout>
</ScrollView>
