<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/back_button"
        android:src="@drawable/ic_arrow_left"
        android:background="?android:attr/selectableItemBackgroundBorderless"/>


    <TextView
        android:id="@+id/tvSelectDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s_lectionner_la_date_de_d_part"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        android:textStyle="bold"/>

    <Spinner
        android:id="@+id/spinnerDate"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"/>


    <TextView
        android:id="@+id/tvAvailableSeats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/places_disponibles"
        android:textSize="16sp"
        android:textColor="#333333"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/tvSeatsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_de_places"
        android:textSize="16sp"
        android:textColor="#000000"
        android:layout_marginBottom="8dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etSeats"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/entrez_le_nombre_de_places"
        android:inputType="number"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/tvPriceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prix_total"
        android:textSize="16sp"
        android:textColor="#000000"
        android:layout_marginBottom="8dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvTotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prix_0"
        android:textSize="16sp"
        android:textColor="#333333"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/v_rifier_la_disponibilit"
        android:textColor="#FFFFFF"
        android:backgroundTint="#00BCD4"/>

</LinearLayout>
